fixing mobile layout issues

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1057,6 +1057,10 @@ body {
     display: block;
   }
 
+  .sm\:inline-block {
+    display: inline-block;
+  }
+
   .sm\:flex {
     display: flex;
   }
@@ -1136,6 +1140,10 @@ body {
 
   .md\:mr-11 {
     margin-right: 2.75rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
   }
 
   .md\:block {
@@ -1218,8 +1226,21 @@ body {
     border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
   }
 
+  .md\:border-b {
+    border-bottom-width: 1px;
+  }
+
+  .md\:border-slate {
+    --tw-border-opacity: 1;
+    border-color: rgb(49 74 87 / var(--tw-border-opacity));
+  }
+
   .md\:p-11 {
     padding: 2.75rem;
+  }
+
+  .md\:p-0 {
+    padding: 0px;
   }
 
   .md\:py-4 {
